--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,3 +12,8 @@
         "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
         "Noto Color Emoji";
 }
+
+[x-cloak] {
+    display : none !important;
+}
+
